# epi-ad-tracker-v2

./: .env.example  .gitignore  .prettierrc  README.md  components.json  log1.txt  log2.txt  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  randomtypes.ts  tailwind.config.ts  tsconfig.json  turbo.json  types.ts  vercel.json  vercel_wait.json
SCRIPTS/: fetch-facebook-ads-checkpoint.ipynb  fetch-facebook-ads-checkpoint.py  list_packages.py  runscript.sh  script.py
apps/legacy-web/: .eslintrc.cjs  next.config.mjs  package.json  tsconfig.json
apps/legacy-web/src/: env.js
apps/meta-fetcher/: .env.example  README.md  pyproject.toml  requirements.txt  vercel.json
apps/meta-fetcher/api/cron/: metafetch.py
apps/meta-fetcher/fetcher/: config.py  job.py
apps/meta-fetcher/scripts/: fetch-facebook-ads-checkpoint.py  run.sh
apps/meta-fetcher/src/meta_fetcher/: __init__.py  cli.py  fetcher.py
apps/web/: next.config.ts  package.json  tsconfig.json
prisma/: schema.prisma
prisma/migrations/20240111205953_added_tobles/: migration.sql
prisma/migrations/20240111212200_uppercase_g/: migration.sql
prisma/migrations/20240111212340_stuff/: migration.sql
prisma/migrations/20240111212421_stuffs/: migration.sql
prisma/migrations/20240111213733_changing_types/: migration.sql
prisma/migrations/20240111214247_even_more_stuff/: migration.sql
src/: env.js
src/components/: common.tsx
src/pages/: _app.tsx  ads.tsx  index.tsx
src/pages/ad/: [id].tsx
src/server/: db.ts  functions.ts
src/utils/: ad-screenshot.ts  functions.ts
(+72 files in other folders)
