[project]
name = "meta-fetcher"
version = "0.1.0"
description = "Meta ad data pull and sync pipeline for the EPI Ad Tracker monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "selenium>=4.27.0",
]

[project.scripts]
meta-fetcher = "meta_fetcher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meta_fetcher"]
